# ECE560_final

./: .gitignore  Cargo.toml  README.md  Report.md  index.html  reference.ipynb
.github/workflows/: ci.yml
pkg/: package.json  terrain_wgpu.d.ts  terrain_wgpu.js  terrain_wgpu_bg.wasm  terrain_wgpu_bg.wasm.d.ts
src/: camera.rs  context.rs  lib.rs  shader.wgsl  texture.rs
src/render/: camera.rs  clear.rs  mod.rs  perlin.rs  perlin_compute.wgsl  perlin_render.wgsl  renderable.rs  sky.rs  skybox.wgsl  terrain.wgsl  water.rs  water.wgsl
