[package]
name = "terrain-wgpu"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
bytemuck = { version = "1.16", features = [ "derive" ] }
noise = "0.9"
cgmath = "0.18.0"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }